theory/week_04/day2/lab_scripts/challenge1/broken-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: user-service
spec:
  host: user-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2  # 🐛 BUG: 실제 Pod는 ver: v2
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
