theory/week_04/day2/lab_scripts/challenge1/broken-fault-injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-routes
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: /users
    route:
    - destination:
        host: user-service
        subset: v1
      weight: 90
    - destination:
        host: user-service
        subset: v2
      weight: 10
  - match:
    - uri:
        prefix: /product  # 🐛 BUG: 잘못된 경로
    route:
    - destination:
        host: wrong-product-service  # 🐛 BUG: 잘못된 host
        port:
          number: 80
    fault:  # 🐛 BUG: fault가 route 뒤에 있음 (앞에 있어야 함)
      delay:
        percentage:
          value: 50
        fixedDelay: 3s
      abort:
        percentage:
          value: 20
        httpStatus: 503
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        host: order-service
        port:
          number: 8080  # 🐛 BUG: 잘못된 포트
