theory/week_04/day2/lab_scripts/challenge1/broken-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-routes
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: /users
    route:
    - destination:
        host: user-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /product  # 🐛 BUG: prefix 오류
    route:
    - destination:
        host: wrong-product-service  # 🐛 BUG: 잘못된 서비스
        port:
          number: 80
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        host: order-service
        port:
          number: 8080  # 🐛 BUG: 포트 오류
